BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Remote_Meeting_vod__c.object
<CustomObject>
    <description>Maintains data for Remote Meetings</description>
    <fields>
        <fullName>Meeting_Id_vod__c</fullName>
        <description>Remote Meeting Id</description>
        <label>Meeting Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Name_vod__c</fullName>
        <description>Meeting Name for the Remote Meeting</description>
        <label>Meeting Name</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scheduled_DateTime_vod__c</fullName>
        <description>Date/Time of last API update to the Remote Meeting</description>
        <label>Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is TRUE when Remote Meeting information has been successfully created/updated via the web service</description>
        <label>Successfully Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <label>Remote Meeting</label>
    <nameField>
        <label>Remote Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remote Meetings</pluralLabel>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>false</active>
        <description>For Remote Meetings on Call</description>
        <label>Call_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>